[package]
name = "mqttcasters"
version = "0.1.0"
edition = "2024"
description = "A lightweight Chromecast MQTT connector"
license = "MIT"

[lib]
name = "mqttcasters"
path = "src/lib.rs"

[[bin]]
name = "mqttcasters"
path = "src/main.rs"

[dependencies]
cast-sender = "0.3.0"
rumqttc = { version = "0.25", features = ["url"] }
mdns-sd = { version = "0.19", optional = true }
zeroconf = { version = "0.18.0", optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4.6.1", features = ["derive", "env"] }
thiserror = "2"

[features]
default = ["mdns-sd"]
mdns-sd = ["dep:mdns-sd"]
zeroconf = ["dep:zeroconf"]
